[package]
name = "typed-sql"
version = "0.1.2"
edition = "2018"
license = "MIT"
description = "A strongly typed sql serialization/deserialization framework"
repository = "https://github.com/matthunz/typed-sql"

[workspace]

[lib]
name = "typed_sql"

[dependencies]
async-trait = "0.1.50"
typed-sql-derive = "0.1.1"
