[package]
name = "typed-sql-derive"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Macro implementation for typed-sql"
repository = "https://github.com/matthunz/typed-sql"

[lib]
name = "typed_sql_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.72"
